[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ansys-tools-common"
version = "0.1.dev0"
description = "A set of tools for PyAnsys libraries"
readme = "README.rst"
requires-python = ">=3.10,<4"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
maintainers = [{ name = "ANSYS, Inc.", email = "pyansys.core@ansys.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "platformdirs>=3.6.0",
    "click>=8.1.3",        # for CLI interface
    "scooby>=0.5.12",
]

[project.optional-dependencies]
all = [
    "ansys-tools-visualization-tool>=0.9.2",
    "ansys-tools-filetransfer>=0.1.1",
]

graphics = [
    "ansys-tools-visualization-tool>=0.9.2",
]

filetransfer = [
    "ansys-tools-filetransfer>=0.1.1",
]

tests = [
    "pytest==8.4.0",
    "pytest-cov==6.1.1",
    "pyfakefs==5.8.0",
    "hypothesis==6.135.10",
    "grpcio==1.73.0",
]

doc = [
    "ansys-sphinx-theme==1.5.2",
    "sphinx==8.2.3",
    "sphinx-autoapi==3.6.0",
    "sphinx-copybutton==0.5.2",
    "sphinx_design==0.6.1",
    "sphinx-gallery==0.19.0",
    "sphinx-jinja==2.0.2",
]

[project.scripts]
save-ansys-path = "ansys.tools.common.path.save:cli"
ansys-launcher = "ansys.tools.local_product_launcher._cli:cli"

[project.urls]
Source = "https://github.com/ansys/ansys-tools-common"
Issues = "https://github.com/ansys/ansys-tools-common/issues"
Discussions = "https://github.com/ansys/ansys-tools-common/discussions"
Documentation = "https://ansys.tools.docs.pyansys.com/"
Releases = "https://github.com/ansys/ansys-tools-common/releases/"

[tool.flit.module]
name = "ansys.tools.common"

[tool.ruff]
line-length = 120
fix = true
extend-exclude = ["examples/**/*.py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle, see https://beta.ruff.rs/docs/rules/#pycodestyle-e-w
    "D",   # pydocstyle, see https://beta.ruff.rs/docs/rules/#pydocstyle-d
    "F",   # pyflakes, see https://beta.ruff.rs/docs/rules/#pyflakes-f
    "I",   # isort, see https://beta.ruff.rs/docs/rules/#isort-i
    "N",   # pep8-naming, see https://beta.ruff.rs/docs/rules/#pep8-naming-n
    "PTH", # flake8-use-pathlib, https://beta.ruff.rs/docs/rules/#flake8-use-pathlib-pth
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["ansys"]

[tool.ruff.lint.pydocstyle]
# Settings: https://docs.astral.sh/ruff/settings/#lintpydocstyle
convention = "numpy"

[tool.towncrier]
package = "ansys.tools.common"
directory = "doc/changelog.d"
filename = "CHANGELOG.md"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "doc/changelog.d/changelog_template.jinja"
title_format = "## [{version}](https://github.com/ansys/ansys-tools-common/releases/tag/v{version}) - {project_date}"
issue_format = "[#{issue}](https://github.com/ansys/ansys-tools-common/pull/{issue})"

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "dependencies"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "miscellaneous"
name = "Miscellaneous"
showcontent = true
[[tool.towncrier.type]]
directory = "documentation"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "maintenance"
name = "Maintenance"
showcontent = true

[[tool.towncrier.type]]
directory = "test"
name = "Test"
showcontent = true
